@@ -22,7 +22,7 @@ from zope.exceptions.interfaces import UserError, IUserError
 # avoid dependency on zope.security:
 try:
     import zope.security
-except ImportError, v: #pragma NO COVER
+except ImportError as v: #pragma NO COVER
     # "ImportError: No module named security"
     if not str(v).endswith('security'):
         raise
