@@ -5,6 +5,11 @@ Changes
 4.0.0 (unreleased)
 ------------------
 
+- Removed use of '2to3' and associated fixers when installing under Py3k.
+  The code is now in a "compatible subset" which supports Python 2.6, 2.7,
+  and 3.2, including PyPy 1.8 (the version compatible with the 2.7 language
+  spec).
+
 - 100% unit test coverage.
 
 - Dropped explicit support for Python 2.4 / 2.5 / 3.1.
